create login signup and game page skeleton with some code

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,12 @@
+body{
+    background-color: black;
+}
+
 #appTitle{
     text-align: center;
     color: white;
 }
 
-body{
-    background-color: black;
+#startGame{
+    color: white;
 }
